fixed image spacing issue

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -10,32 +10,74 @@ h1 {
 	color: #fff;
 	font-family: 'Oswald', sans-serif;
 	font-size: 30px;
+	padding: 5px;
+	text-transform: uppercase;
+
 }
 
-p, ul { 
+h1, nav, ul {
+	display: inline;
+}
+
+p { 
 	font-family: 'Belleza', serif;
 	color: #000;
 	font-size: .85em;
 	margin-bottom: 1.25em; 
+}
+
+ul {
+	font-family: 'Oswald', sans-serif;
+	color: #fff;
+	font-size: 1em;
+	list-style: none;
+}
+
+nav {
+	text-transform: uppercase;
+}
+
+li {
+	display: inline;
+	padding: 0px 10px;
 
 }
 
+header { 
+	background: #000;
+	margin: 0;
+	padding: 0 0 0 20px;
+	height: 50px;}
+
+
 div { 
 	margin: 0;
+	padding: 0;
 	display: block;
+}
 
+section { 
+	margin: 0;
+	padding: 0;
+
+}
+
+section img {
+    width: 100%;
+    height: auto;
+    display: block;
 }
 
 #news {
 	color: #000;
 	font-family: 'Belleza', serif;
-	font-size: 1.25em
+	font-size: 1.5em;
 }
 
 #footer {
 	color: #000;
 	font-family: 'Oswald', sans-serif;
-	font-size: .5em
+	font-size: .5em;
 }
 
 a:link {
@@ -56,11 +98,7 @@ a:hover {
 
 .container{ 
 	margin: 0;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-right: 10px;
-	padding-left: 20px;
-
+	padding: 10px 10px 10px 40px;
 }
 
 .footerblock{ 
@@ -73,18 +111,6 @@ a:hover {
 
 }
 
-.displayimage{ 
-	margin: 0;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-right: 0px;
-	padding-left: 0px;
-}
 
-.navblock{ 
-	background-color: #000;
-	margin: 0;
-	height: 40px;
-    width: 100%;
-}
+
 
